--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
     <nav class="menu" id="main-menu">
         <ol>
-            <li class="menu-item"><a href="#0">Home</a></li>
-            <li class="menu-item"><a href="#0">About</a></li>
+            <li class="menu-item"><a href="#0">経理業務</a></li>
+            <li class="menu-item"><a href="#0">経理ポータル</a></li>
             <li class="menu-item">
                 <a href="#0">Widgets</a>
                 <ol class="sub-menu">
