--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <video id="intro-video" src="PT AP120250715.mp4" autoplay muted playsinline></video>
+    <video id="intro-video" src="PT AP2_20250715.mp4" autoplay muted playsinline></video>
 
     <nav id="main-menu" class="menu" style="visibility: hidden;">
         <ol>
@@ -34,7 +34,7 @@
         </ol>
     </nav>
 
-    <script src="script2.js" defer></script>
+    <script src="script3.js" defer></script>
 
 </body>
 </html>
